# hambot-labs

./: .gitignore  LICENSE  README.md  USFID_Lab1_Task1.py  navigate_waypoints.py  new.py  pyproject.toml  requirements.txt  sample.py  setup.py  test.py
Lab 1/: navigate_waypoints.py
Lab 4/: Lab4.py  color_test.py  hambot_api_convention.md  task1_trilateration.py
docs/: HamBot.mtl  IMU.md  camera.md  lidar.md  motors.md
hambot/: camera.py  imu.py  lidar.py
robot_systems/: camera.py  cameraGUI.py  landmark.py  lidar.py  robot.py
src/robot_systems/: camera.py  cameraGUI.py  imu.py  landmark.py  lidar.py  robot.py
